# clgrp-1.3

./: Makefile.am  clgrp-1.3.tex  clgrp.c  clgrp.h  clgrp_main.c  config.h.in  configure  configure.ac  functions.c  functions.h  sieve.c  sieve.h  verify.c  verify.h  verify_main.c
